--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+swupdate (2020.01~televic10+1) buster-televic-unstable; urgency=medium
+
+  * port to televic infra
+
+ -- Marc Leeman <m.leeman@televic.com>  Wed, 29 Jan 2020 09:16:02 +0100
+
 swupdate (2019.11) experimental; urgency=medium
 
   [ Stefano Babic ]
