changelog: updated version to 2020.01~televic10+1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,13 @@
 swupdate (2020.01~televic10+1) buster-televic-unstable; urgency=medium
 
+  * Non-maintainer Upload
+  * debian: build-dep on new packages libmtd-dev libubi-dev
+  * debian: build-dep on libsystemd-dev
+  * debian: depend on libcmocka-dev
+  * debian: add source lintian-overrides
   * port to televic infra
 
- -- Marc Leeman <m.leeman@televic.com>  Wed, 29 Jan 2020 09:16:02 +0100
+ -- Marc Leeman <m.leeman@televic.com>  Wed, 29 Jan 2020 09:29:00 +0100
 
 swupdate (2019.11) experimental; urgency=medium
 
